# LeaseLens-AI-v2

./: .env.example  README.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  auth.py  context.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/api/app/routers/: auth.py  leases.py
infra/: docker-compose.yml
